<resources>
    <string name="app_name">app</string>
    <string name="post">post</string>
    <string name="get">get</string>
    <string name="data">data</string>
    <string name="name">Name</string>
    <string name="kod">kod\n</string>
    <string name="nazwa" />
    <string name="Code">Code</string>
    <string name="Name">Name</string>
    <string name="Date" />
    <string name="syn">sync</string>
    <string name="view">view</string>
    <string name="save">save</string>
    <string name="code">Code</string>
    <string name="adress">adress</string>
    <string name="menu">menu</string>
    <string name="create_table">Create Table</string>
    <string name="settings">settings</string>
    <string name="logout">logout</string>
    <string name="columns">Columns</string>
    <string name="insert_table">insert</string>
    <string name="admin_panel">admin panel</string>
    <string name="export">export</string>
    <string name="import_table">import table</string>
    <string-array name="column_types">
        <item>INT</item>
        <item>VARCHAR(255)</item>
        <item>TEXT</item>
        <item>DATE</item>
        <item>FLOAT</item>
    </string-array>
</resources>