<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/info_menu_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="Tables" />

    <ListView
        android:id="@+id/tablesListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="0dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/insert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_table"
            android:layout_marginEnd="8dp" />
        <Button
            android:id="@+id/export_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/export" />
        <Button
            android:id="@+id/admin_panel_button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/admin_panel"
            android:layout_marginEnd="8dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/createTableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_table"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/logout" />
    </LinearLayout>

</LinearLayout>
